# ncc

./: CMakeLists.txt  README.md  a.c  build.sh  ncc.c  res
tests/: a.out  main.c  module_test  ncc.ncc.c  ncc.precom.c
